--- a/order-service.properties
+++ b/order-service.properties
@@ -3,13 +3,13 @@
 
 server.port=0
 
-# Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# Eureka Client Configuration (Docker service name)
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3308/order_db?createDatabaseIfNotExist=true
+# Database Configuration (Docker service name)
+spring.datasource.url=jdbc:mysql://mysql-order:3306/order_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
