Fix frontend-api Eureka URL for Docker

--- a/frontend-api.properties
+++ b/frontend-api.properties
@@ -3,8 +3,8 @@
 
 server.port=0
 
-# Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# Eureka Client Configuration (Docker service name)
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
