Add database seeding configuration

--- a/order-service.properties
+++ b/order-service.properties
@@ -20,6 +20,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
+# Data Initialization
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
+
 # Custom Configuration Property (Required by assignment)
 mes-config-ms.commandes-last=10
 
