Fix data initialization to run after schema creation

--- a/product-service.properties
+++ b/product-service.properties
@@ -20,9 +20,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Data Initialization
+# Data Initialization (runs AFTER Hibernate creates tables)
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
+spring.jpa.defer-datasource-initialization=true
 
 # Actuator endpoints
 management.endpoints.web.exposure.include=*
