--- a/gateway.properties
+++ b/gateway.properties
@@ -25,6 +25,9 @@ spring.cloud.gateway.routes[2].id=frontend-api
 spring.cloud.gateway.routes[2].uri=lb://frontend-api
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/frontend/**
 
+# CORS Configuration (for React frontend)
+# CORS is handled via CorsConfig.java
+
 # Actuator endpoints
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
